--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 .container {
 	z-index: 1;
 	padding: 20px;
-	max-width: 800px;
 	margin-left: 25%;
 	position: relative;
 	border-radius: 10px;
+	max-width: 800px !important;
 	background-color: rgba(255, 255, 255, 0.8);
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
@@ -64,9 +64,15 @@ td {
 }
 
 .crypto-text {
+	margin-top: 10%;
 	font-size: 12px;
 	color: #777777;
+	margin-left: -70%;
 	text-align: center;
+}
+
+tr td {
+	padding-left: 6% !important;
 }
 
 .ML,
